@@ -18,6 +18,8 @@
 /doc/automake*.dvi
 /doc/automake*.pdf
 /doc/automake*.ps
+/doc/automake*.t2d/
+/doc/automake*.t2p/
 /doc/automake*.1
 /doc/aclocal*.1
 /doc/stamp-vti
