@@ -4,6 +4,9 @@ New in 1.13:
 
   - Autoconf 2.65 or greater is required.
 
+  - The rules to build PDF and DVI output from Texinfo input now
+    requires Texinfo 4.9 or later.
+
 * Obsolete features removed:
 
   - Use of the long-deprecated two- and three-arguments invocation forms
@@ -55,6 +58,13 @@ New in 1.13:
   - The 'silent-rules' option has now become a no-op, preserved for
     backward-compatibility only.  In particular, its use does not disable
     the warnings in the 'portability-recursive' category anymore.
+
+* Texinfo Support:
+
+  - The rules to build PDF and DVI files from Texinfo input now use the
+    ' --build-dir' option, to keep the auxiliary files used by texi2dvi
+    and texi2pdf around without cluttering the build directory, and to
+    make it possible to run the "dvi" and "pdf" recipes in parallel.
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
